--- a/SaleLaptopSystem/SaleLaptopSystem/Web.config
+++ b/SaleLaptopSystem/SaleLaptopSystem/Web.config
@@ -12,6 +12,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SaleLaptopSystem-20201019091804.mdf;Initial Catalog=aspnet-SaleLaptopSystem-20201019091804;Integrated Security=True"
+      providerName="System.Data.SqlClient" /> 
+    <add name="SaleLaptopSystem" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SaleLaptopSystem.mdf;Initial Catalog=SaleLaptopSystem;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
