--- a/SaleLaptopSystem/SaleLaptopSystem/bin/SaleLaptopSystem.dll.config
+++ b/SaleLaptopSystem/SaleLaptopSystem/bin/SaleLaptopSystem.dll.config
@@ -11,10 +11,13 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SaleLaptopSystem-20201019091804.mdf;Initial Catalog=aspnet-SaleLaptopSystem-20201019091804;Integrated Security=True"
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SaleLaptopSystem-20201019091804.mdf;Initial Catalog=aspnet-SaleLaptopSystem-20201019091804;Integrated Security=True"
       providerName="System.Data.SqlClient" /> 
     <add name="SaleLaptopSystem" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SaleLaptopSystem.mdf;Initial Catalog=SaleLaptopSystem;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+      providerName="System.Data.SqlClient" />-->
+    <add name="SaleLaptopSystem"
+      connectionString="Data Source=TANGMINHTIN;Initial Catalog=SaleLaptopSystem;Integrated Security=True"
+      providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
