--- a/SaleLaptopSystem/SaleLaptopSystem/bin/SaleLaptopSystem.dll.config
+++ b/SaleLaptopSystem/SaleLaptopSystem/bin/SaleLaptopSystem.dll.config
@@ -16,7 +16,7 @@
     <add name="SaleLaptopSystem" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SaleLaptopSystem.mdf;Initial Catalog=SaleLaptopSystem;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
     <add name="SaleLaptopSystem"
-      connectionString="Data Source=DESKTOP-ARU2FKN\MSSQLSERVER01;Initial Catalog=SaleLaptopSystem;Integrated Security=True"
+      connectionString="Data Source=TANGMINHTIN;Initial Catalog=SaleLaptopSystem;Integrated Security=True"
       providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
