--- a/SaleLaptopSystem/SaleLaptopSystem/bin/SaleLaptopSystem.dll.config
+++ b/SaleLaptopSystem/SaleLaptopSystem/bin/SaleLaptopSystem.dll.config
@@ -13,13 +13,11 @@
       providerName="System.Data.SqlClient" /> 
     <add name="SaleLaptopSystem" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SaleLaptopSystem.mdf;Initial Catalog=SaleLaptopSystem;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
-<<<<<<< HEAD
-    <add name="SaleLaptopSystem" connectionString="Data Source=DESKTOP-ARU2FKN\MSSQLSERVER01;Initial Catalog=SaleLaptopSystem;Integrated Security=True" providerName="System.Data.SqlClient" />
-=======
-    <add name="SaleLaptopSystem"
-      connectionString="Data Source=TANGMINHTIN;Initial Catalog=SaleLaptopSystem;Integrated Security=True"
-      providerName="System.Data.SqlClient"/>
->>>>>>> origin
+	  <!--<add name="SaleLaptopSystem"
+	connectionString="data source=DESKTOP-ARU2FKN\MSSQLSERVER01; Integrated Security=True; database=SaleLaptopSystem"
+	providerName="System.Data.SqlClient"/>-->
+	  <add name="SaleLaptopSystem" connectionString="Data Source=DESKTOP-ARU2FKN\MSSQLSERVER01;Initial Catalog=SaleLaptopSystem;Integrated Security=True" 
+		   providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
