load image product

--- a/SaleLaptopSystem/SaleLaptopSystem/SaleLaptopSystem.csproj
+++ b/SaleLaptopSystem/SaleLaptopSystem/SaleLaptopSystem.csproj
@@ -240,6 +240,26 @@
     <Content Include="img\Brands_img\asus_logo-1024x538.jpg" />
     <Content Include="img\Brands_img\HP-Logo-1067x600.jpg" />
     <Content Include="img\Brands_img\logo-may-tinh.jpg" />
+    <Content Include="img\Brands_img\Prodcut24.png" />
+    <Content Include="img\Brands_img\Product1.png" />
+    <Content Include="img\Brands_img\Product2.png" />
+    <Content Include="img\Brands_img\Product22.png" />
+    <Content Include="img\Brands_img\Product25.png" />
+    <Content Include="img\Brands_img\Product26.png" />
+    <Content Include="img\Brands_img\Product29.png" />
+    <Content Include="img\Brands_img\Product3.png" />
+    <Content Include="img\Brands_img\Product32.png" />
+    <Content Include="img\Brands_img\Product33.png" />
+    <Content Include="img\Brands_img\Product34.png" />
+    <Content Include="img\Brands_img\Product35.png" />
+    <Content Include="img\Brands_img\Product37.png" />
+    <Content Include="img\Brands_img\Product38.png" />
+    <Content Include="img\Brands_img\Product4.png" />
+    <Content Include="img\Brands_img\Product40.png" />
+    <Content Include="img\Brands_img\Product43.png" />
+    <Content Include="img\Brands_img\Product44.png" />
+    <Content Include="img\Brands_img\Product45.png" />
+    <Content Include="img\Brands_img\Product9.png" />
     <Content Include="img\cart.png" />
     <Content Include="img\head1.jpg" />
     <Content Include="img\head2.jpg" />
