--- a/SaleLaptopSystem/SaleLaptopSystem/bin/SaleLaptopSystem.dll.config
+++ b/SaleLaptopSystem/SaleLaptopSystem/bin/SaleLaptopSystem.dll.config
@@ -16,7 +16,10 @@
 	  <!--<add name="SaleLaptopSystem"
 	connectionString="data source=DESKTOP-ARU2FKN\MSSQLSERVER01; Integrated Security=True; database=SaleLaptopSystem"
 	providerName="System.Data.SqlClient"/>-->
-	  <add name="SaleLaptopSystem" connectionString="Data Source=DESKTOP-ARU2FKN\MSSQLSERVER01;Initial Catalog=SaleLaptopSystem;Integrated Security=True" 
+	  <!--<add name="SaleLaptopSystem" connectionString="Data Source=DESKTOP-ARU2FKN\MSSQLSERVER01;Initial Catalog=SaleLaptopSystem;Integrated Security=True" 
+		   providerName="System.Data.SqlClient" />-->	  
+    
+    <add name="SaleLaptopSystem" connectionString="Data Source=TANGMINHTIN;Initial Catalog=SaleLaptopSystem;Integrated Security=True" 
 		   providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
