--- a/SaleLaptopSystem/SaleLaptopSystem/Web.config
+++ b/SaleLaptopSystem/SaleLaptopSystem/Web.config
@@ -19,7 +19,7 @@
 	  <!--<add name="SaleLaptopSystem" connectionString="Data Source=DESKTOP-ARU2FKN\MSSQLSERVER01;Initial Catalog=SaleLaptopSystem;Integrated Security=True" 
 		   providerName="System.Data.SqlClient" />-->	  
     
-    <add name="SaleLaptopSystem" connectionString="Data Source=TANGMINHTIN;Initial Catalog=SaleLaptopSystem;Integrated Security=True" 
+    <add name="SaleLaptopSystem" connectionString="Data Source=DESKTOP-F1RBPR9;Initial Catalog=SaleLaptopSystem;Integrated Security=True" 
 		   providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -34,7 +34,7 @@
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <system.webServer>
-    <modules>
+    <modules>   
       <remove name="FormsAuthentication" />
     </modules>
   <handlers>
