--- a/SaleLaptopSystem/SaleLaptopSystem/SaleLaptopSystem.csproj
+++ b/SaleLaptopSystem/SaleLaptopSystem/SaleLaptopSystem.csproj
@@ -46,6 +46,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -234,6 +240,7 @@
     <Content Include="Content\css\login.css" />
     <Content Include="Content\css\shared.css" />
     <Content Include="Content\css\sign-up.css" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -243,10 +250,10 @@
     <Content Include="img\Brands_img\asus_logo-1024x538.jpg" />
     <Content Include="img\Brands_img\HP-Logo-1067x600.jpg" />
     <Content Include="img\Brands_img\logo-may-tinh.jpg" />
-    <Content Include="img\Brands_img\Prodcut24.png" />
     <Content Include="img\Brands_img\Product1.png" />
     <Content Include="img\Brands_img\Product2.png" />
     <Content Include="img\Brands_img\Product22.png" />
+    <Content Include="img\Brands_img\Product24.png" />
     <Content Include="img\Brands_img\Product25.png" />
     <Content Include="img\Brands_img\Product26.png" />
     <Content Include="img\Brands_img\Product29.png" />
