--- a/SaleLaptopSystem/SaleLaptopSystem/Web.config
+++ b/SaleLaptopSystem/SaleLaptopSystem/Web.config
@@ -19,7 +19,7 @@
 	  <!--<add name="SaleLaptopSystem" connectionString="Data Source=DESKTOP-ARU2FKN\MSSQLSERVER01;Initial Catalog=SaleLaptopSystem;Integrated Security=True" 
 		   providerName="System.Data.SqlClient" />-->	  
     
-    <add name="SaleLaptopSystem" connectionString="Data Source=DESKTOP-ARU2FKN\MSSQLSERVER01;Initial Catalog=SaleLaptopSystem;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SaleLaptopSystem" connectionString="Data Source=minhtintang;Initial Catalog=SaleLaptopSystem;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
