Update profile + reset password

--- a/SaleLaptopSystem/SaleLaptopSystem/SaleLaptopSystem.csproj
+++ b/SaleLaptopSystem/SaleLaptopSystem/SaleLaptopSystem.csproj
@@ -253,6 +253,7 @@
     <Content Include="img\Brands_img\asus_logo-1024x538.jpg" />
     <Content Include="img\Brands_img\HP-Logo-1067x600.jpg" />
     <Content Include="img\Brands_img\logo-may-tinh.jpg" />
+    <Content Include="img\logo.jpg" />
     <Content Include="img\Brands_img\Product1.png" />
     <Content Include="img\Brands_img\Product2.png" />
     <Content Include="img\Brands_img\Product22.png" />
